<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dieta.HistoricoActivity"
    android:orientation="vertical"
    android:background="@drawable/dieta03">

        <TextView
            android:id="@+id/dataInicialTxt"
            android:hint="@string/data_inicial"
            android:layout_marginTop="80dp"
            style="@style/edit_text_data_inicial" />

        <TextView
            android:id="@+id/dataFinalTxt"
            android:hint="@string/data_final"
            android:layout_marginTop="10dp"
            style="@style/edit_text_data_inicial" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/media_cal"/>
        <TextView
            style="@style/calorias_entre_datas" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/media_caloria_entre_datas"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            style="@style/medias_pequenas" />

        <TextView
            style="@style/kcal"/>

        <TextView
            android:id="@+id/caloria_entre_datas"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            style="@style/medias_pequenas" />
        <TextView
            style="@style/kcal"/>

    </LinearLayout>

    <TextView
        style="@style/media_refeicoes" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cafe_manha"
            android:textSize="@dimen/normal"/>

        <TextView
            android:id="@+id/media_cafe_manha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:text="0"
            android:textSize="@dimen/normal"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desjejum"
            android:textSize="@dimen/normal"/>

        <TextView
            android:id="@+id/media_desjejum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="@dimen/normal"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/almoço"
            android:textSize="@dimen/normal"/>

        <TextView
            android:id="@+id/media_almoco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:text="0"
            android:textSize="@dimen/normal"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lanche_tarde"
            android:textSize="@dimen/normal"/>

        <TextView
            android:id="@+id/media_lanche_tarde"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="0"
            android:textSize="@dimen/normal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/happy_hour"
            android:layout_marginLeft="2dp"
            android:textSize="@dimen/normal"/>

        <TextView
            android:id="@+id/media_happy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="@dimen/normal"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jantar"
            android:textSize="@dimen/normal"/>

        <TextView
            android:id="@+id/media_jantar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:text="0"
            android:textSize="@dimen/normal"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sobremesa"
            android:textSize="@dimen/normal"/>

        <TextView
            android:id="@+id/media_sobremesa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:text="0"
            android:textSize="@dimen/normal"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/outros"
            android:textSize="@dimen/normal"/>

        <TextView
            android:id="@+id/media_outros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="@dimen/normal"/>

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>